# lithy

./: pyproject.toml  setup.py
fine_tuning_script/: inference.py  supervised_fine_tuning.py  supervised_fine_tuning_gemma.py
llm_summarization/: prompt.txt  supervised_fine_tuning.py
story_editor/: README.md  package-lock.json  package.json
story_editor/src/app/: globals.css  page.tsx
story_editor/src/app/api/files/: route.ts
story_editor/src/app/api/files/[...path]/: route.ts
